// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Template: Article renders 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ArticleTemplate
    data={
      Object {
        "markdownRemark": Object {
          "frontmatter": Object {
            "tags": "t1, t2",
            "title": "Test",
          },
          "html": "<p>Test</p>",
        },
      }
    }
    pathContext={
      Object {
        "path": "/test",
      }
    }
    preview={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <HelmetWrapper
          defer={true}
          encodeSpecialCharacters={true}
        >
          <meta
            charSet="utf-8"
          />
          <title>
            Test
          </title>
          <meta
            content={undefined}
            name="description"
          />
          <meta
            content="Test"
            name="og:title"
          />
          <meta
            content="https://www.csi.lk/test"
            name="og:url"
          />
          <meta
            content="http://www.csi.lk/into-code.png"
            name="og:image"
          />
          <meta
            content={undefined}
            name="og:description"
          />
        </HelmetWrapper>,
        <a
          href="/"
        >
          back home
        </a>,
        <article>
          <header>
            <h1>
              Test
            </h1>
            <TagListComponent
              tags="t1, t2"
            />
          </header>
          <section
            dangerouslySetInnerHTML={
              Object {
                "__html": "<p>Test</p>",
              }
            }
          />
          <footer>
            <p>
              Find a spelling mistake or issue with this article? 
              <br />
              <a
                href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/articles/test.md"
                rel="nofollow noopener"
                target="_blank"
              >
                Submit a edit on Github
              </a>
            </p>
          </footer>
        </article>,
      ],
      "className": "article",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <meta
              charSet="utf-8"
            />,
            <title>
              Test
            </title>,
            <meta
              content={undefined}
              name="description"
            />,
            <meta
              content="Test"
              name="og:title"
            />,
            <meta
              content="https://www.csi.lk/test"
              name="og:url"
            />,
            <meta
              content="http://www.csi.lk/into-code.png"
              name="og:image"
            />,
            <meta
              content={undefined}
              name="og:description"
            />,
          ],
          "defer": true,
          "encodeSpecialCharacters": true,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "charSet": "utf-8",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Test",
            },
            "ref": null,
            "rendered": "Test",
            "type": "title",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": undefined,
              "name": "description",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "Test",
              "name": "og:title",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "https://www.csi.lk/test",
              "name": "og:url",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "http://www.csi.lk/into-code.png",
              "name": "og:image",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": undefined,
              "name": "og:description",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "back home",
          "href": "/",
        },
        "ref": null,
        "rendered": "back home",
        "type": "a",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <header>
              <h1>
                Test
              </h1>
              <TagListComponent
                tags="t1, t2"
              />
            </header>,
            <section
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<p>Test</p>",
                }
              }
            />,
            <footer>
              <p>
                Find a spelling mistake or issue with this article? 
                <br />
                <a
                  href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/articles/test.md"
                  rel="nofollow noopener"
                  target="_blank"
                >
                  Submit a edit on Github
                </a>
              </p>
            </footer>,
          ],
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <h1>
                  Test
                </h1>,
                <TagListComponent
                  tags="t1, t2"
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "Test",
                },
                "ref": null,
                "rendered": "Test",
                "type": "h1",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "tags": "t1, t2",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": "header",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "dangerouslySetInnerHTML": Object {
                "__html": "<p>Test</p>",
              },
            },
            "ref": null,
            "rendered": null,
            "type": "section",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": <p>
                Find a spelling mistake or issue with this article? 
                <br />
                <a
                  href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/articles/test.md"
                  rel="nofollow noopener"
                  target="_blank"
                >
                  Submit a edit on Github
                </a>
              </p>,
            },
            "ref": null,
            "rendered": Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  "Find a spelling mistake or issue with this article? ",
                  <br />,
                  <a
                    href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/articles/test.md"
                    rel="nofollow noopener"
                    target="_blank"
                  >
                    Submit a edit on Github
                  </a>,
                ],
              },
              "ref": null,
              "rendered": Array [
                "Find a spelling mistake or issue with this article? ",
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {},
                  "ref": null,
                  "rendered": null,
                  "type": "br",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Submit a edit on Github",
                    "href": "https://github.com/csi-lk/csi.lk/tree/master/src/pages/articles/test.md",
                    "rel": "nofollow noopener",
                    "target": "_blank",
                  },
                  "ref": null,
                  "rendered": "Submit a edit on Github",
                  "type": "a",
                },
              ],
              "type": "p",
            },
            "type": "footer",
          },
        ],
        "type": "article",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <HelmetWrapper
            defer={true}
            encodeSpecialCharacters={true}
          >
            <meta
              charSet="utf-8"
            />
            <title>
              Test
            </title>
            <meta
              content={undefined}
              name="description"
            />
            <meta
              content="Test"
              name="og:title"
            />
            <meta
              content="https://www.csi.lk/test"
              name="og:url"
            />
            <meta
              content="http://www.csi.lk/into-code.png"
              name="og:image"
            />
            <meta
              content={undefined}
              name="og:description"
            />
          </HelmetWrapper>,
          <a
            href="/"
          >
            back home
          </a>,
          <article>
            <header>
              <h1>
                Test
              </h1>
              <TagListComponent
                tags="t1, t2"
              />
            </header>
            <section
              dangerouslySetInnerHTML={
                Object {
                  "__html": "<p>Test</p>",
                }
              }
            />
            <footer>
              <p>
                Find a spelling mistake or issue with this article? 
                <br />
                <a
                  href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/articles/test.md"
                  rel="nofollow noopener"
                  target="_blank"
                >
                  Submit a edit on Github
                </a>
              </p>
            </footer>
          </article>,
        ],
        "className": "article",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <meta
                charSet="utf-8"
              />,
              <title>
                Test
              </title>,
              <meta
                content={undefined}
                name="description"
              />,
              <meta
                content="Test"
                name="og:title"
              />,
              <meta
                content="https://www.csi.lk/test"
                name="og:url"
              />,
              <meta
                content="http://www.csi.lk/into-code.png"
                name="og:image"
              />,
              <meta
                content={undefined}
                name="og:description"
              />,
            ],
            "defer": true,
            "encodeSpecialCharacters": true,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "charSet": "utf-8",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Test",
              },
              "ref": null,
              "rendered": "Test",
              "type": "title",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": undefined,
                "name": "description",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "Test",
                "name": "og:title",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "https://www.csi.lk/test",
                "name": "og:url",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "http://www.csi.lk/into-code.png",
                "name": "og:image",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": undefined,
                "name": "og:description",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "back home",
            "href": "/",
          },
          "ref": null,
          "rendered": "back home",
          "type": "a",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <header>
                <h1>
                  Test
                </h1>
                <TagListComponent
                  tags="t1, t2"
                />
              </header>,
              <section
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "<p>Test</p>",
                  }
                }
              />,
              <footer>
                <p>
                  Find a spelling mistake or issue with this article? 
                  <br />
                  <a
                    href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/articles/test.md"
                    rel="nofollow noopener"
                    target="_blank"
                  >
                    Submit a edit on Github
                  </a>
                </p>
              </footer>,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": Array [
                  <h1>
                    Test
                  </h1>,
                  <TagListComponent
                    tags="t1, t2"
                  />,
                ],
              },
              "ref": null,
              "rendered": Array [
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "host",
                  "props": Object {
                    "children": "Test",
                  },
                  "ref": null,
                  "rendered": "Test",
                  "type": "h1",
                },
                Object {
                  "instance": null,
                  "key": undefined,
                  "nodeType": "function",
                  "props": Object {
                    "tags": "t1, t2",
                  },
                  "ref": null,
                  "rendered": null,
                  "type": [Function],
                },
              ],
              "type": "header",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "dangerouslySetInnerHTML": Object {
                  "__html": "<p>Test</p>",
                },
              },
              "ref": null,
              "rendered": null,
              "type": "section",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": <p>
                  Find a spelling mistake or issue with this article? 
                  <br />
                  <a
                    href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/articles/test.md"
                    rel="nofollow noopener"
                    target="_blank"
                  >
                    Submit a edit on Github
                  </a>
                </p>,
              },
              "ref": null,
              "rendered": Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": Array [
                    "Find a spelling mistake or issue with this article? ",
                    <br />,
                    <a
                      href="https://github.com/csi-lk/csi.lk/tree/master/src/pages/articles/test.md"
                      rel="nofollow noopener"
                      target="_blank"
                    >
                      Submit a edit on Github
                    </a>,
                  ],
                },
                "ref": null,
                "rendered": Array [
                  "Find a spelling mistake or issue with this article? ",
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {},
                    "ref": null,
                    "rendered": null,
                    "type": "br",
                  },
                  Object {
                    "instance": null,
                    "key": undefined,
                    "nodeType": "host",
                    "props": Object {
                      "children": "Submit a edit on Github",
                      "href": "https://github.com/csi-lk/csi.lk/tree/master/src/pages/articles/test.md",
                      "rel": "nofollow noopener",
                      "target": "_blank",
                    },
                    "ref": null,
                    "rendered": "Submit a edit on Github",
                    "type": "a",
                  },
                ],
                "type": "p",
              },
              "type": "footer",
            },
          ],
          "type": "article",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Template: Article renders preview 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <ArticleTemplate
    data={
      Object {
        "markdownRemark": Object {
          "frontmatter": Object {
            "tags": "t1, t2",
            "title": "Test",
          },
          "html": "<p>Test</p>",
        },
      }
    }
    pathContext={
      Object {
        "path": "/test",
      }
    }
    preview={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <HelmetWrapper
          defer={true}
          encodeSpecialCharacters={true}
        >
          <meta
            charSet="utf-8"
          />
          <title>
            Test
          </title>
          <meta
            content={undefined}
            name="description"
          />
          <meta
            content="Test"
            name="og:title"
          />
          <meta
            content="https://www.csi.lk/test"
            name="og:url"
          />
          <meta
            content="http://www.csi.lk/into-code.png"
            name="og:image"
          />
          <meta
            content={undefined}
            name="og:description"
          />
        </HelmetWrapper>,
        <a
          href="/"
        >
          back home
        </a>,
        <div>
          &lt;p&gt;Test&lt;/p&gt;
        </div>,
      ],
      "className": "article",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <meta
              charSet="utf-8"
            />,
            <title>
              Test
            </title>,
            <meta
              content={undefined}
              name="description"
            />,
            <meta
              content="Test"
              name="og:title"
            />,
            <meta
              content="https://www.csi.lk/test"
              name="og:url"
            />,
            <meta
              content="http://www.csi.lk/into-code.png"
              name="og:image"
            />,
            <meta
              content={undefined}
              name="og:description"
            />,
          ],
          "defer": true,
          "encodeSpecialCharacters": true,
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "charSet": "utf-8",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Test",
            },
            "ref": null,
            "rendered": "Test",
            "type": "title",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": undefined,
              "name": "description",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "Test",
              "name": "og:title",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "https://www.csi.lk/test",
              "name": "og:url",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": "http://www.csi.lk/into-code.png",
              "name": "og:image",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "content": undefined,
              "name": "og:description",
            },
            "ref": null,
            "rendered": null,
            "type": "meta",
          },
        ],
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "back home",
          "href": "/",
        },
        "ref": null,
        "rendered": "back home",
        "type": "a",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": "<p>Test</p>",
        },
        "ref": null,
        "rendered": "<p>Test</p>",
        "type": "div",
      },
    ],
    "type": "section",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <HelmetWrapper
            defer={true}
            encodeSpecialCharacters={true}
          >
            <meta
              charSet="utf-8"
            />
            <title>
              Test
            </title>
            <meta
              content={undefined}
              name="description"
            />
            <meta
              content="Test"
              name="og:title"
            />
            <meta
              content="https://www.csi.lk/test"
              name="og:url"
            />
            <meta
              content="http://www.csi.lk/into-code.png"
              name="og:image"
            />
            <meta
              content={undefined}
              name="og:description"
            />
          </HelmetWrapper>,
          <a
            href="/"
          >
            back home
          </a>,
          <div>
            &lt;p&gt;Test&lt;/p&gt;
          </div>,
        ],
        "className": "article",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <meta
                charSet="utf-8"
              />,
              <title>
                Test
              </title>,
              <meta
                content={undefined}
                name="description"
              />,
              <meta
                content="Test"
                name="og:title"
              />,
              <meta
                content="https://www.csi.lk/test"
                name="og:url"
              />,
              <meta
                content="http://www.csi.lk/into-code.png"
                name="og:image"
              />,
              <meta
                content={undefined}
                name="og:description"
              />,
            ],
            "defer": true,
            "encodeSpecialCharacters": true,
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "charSet": "utf-8",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Test",
              },
              "ref": null,
              "rendered": "Test",
              "type": "title",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": undefined,
                "name": "description",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "Test",
                "name": "og:title",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "https://www.csi.lk/test",
                "name": "og:url",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": "http://www.csi.lk/into-code.png",
                "name": "og:image",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "content": undefined,
                "name": "og:description",
              },
              "ref": null,
              "rendered": null,
              "type": "meta",
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "back home",
            "href": "/",
          },
          "ref": null,
          "rendered": "back home",
          "type": "a",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": "<p>Test</p>",
          },
          "ref": null,
          "rendered": "<p>Test</p>",
          "type": "div",
        },
      ],
      "type": "section",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
